@@ -32,6 +32,7 @@
 # 2018-01-02: Changed the default key:  see lines 240-241
 # 2018-01-02: Rewrote find.legend columns, lines 41-44
 # 2018-01-30: enlarged text in key titles
+# 2018-05-13: support plotting partial residuals against a factor on the horizontal axis in plot.lm()
 
 # the following functions aren't exported
 
@@ -272,6 +273,7 @@ plot.eff <- function(x, x.var, z.var=which.min(levels),
   
   if (smooth.residuals && !is.null(x$family)){
     loess.family <- if (x$family == "gaussian") "symmetric" else "gaussian"
+    average.resid <- if (loess.family == "gaussian") mean else median
   }
   
   switch(type,
@@ -317,7 +319,7 @@ plot.eff <- function(x, x.var, z.var=which.min(levels),
   x.all <- x$x.all
   split <- c(col, row, ncol, nrow)
   if (missing(x.var)) x.var <- x$x.var
-  if (!is.null(x.var) && is.numeric(x.var)) x.var <- names(x.var)
+  if (!is.null(x.var) && is.numeric(x.var)) x.var <- colnames(x$x)[x.var] 
   x.data <- x$data
   effect <- paste(sapply(x$variables, "[[", "name"), collapse="*")
   vars <- x$variables
@@ -339,10 +341,15 @@ plot.eff <- function(x, x.var, z.var=which.min(levels),
         range(c(x$lower, x$upper), na.rm=TRUE) else range(x$fit, na.rm=TRUE)
       ylim <- if (!any(is.na(ylim))) ylim else c(range[1] - .025*(range[2] - range[1]),
                                                  range[2] + .025*(range[2] - range[1]))
+      if (!is.null(partial.residuals.range)){
+        ylim[1] <- min(ylim[1], partial.residuals.range[1])
+        ylim[2] <- max(ylim[2], partial.residuals.range[2])
+      }
       tickmarks <- if (type == "response" && rescale.axis) 
         make.ticks(ylim, link=trans.link, inverse=trans.inverse, at=ticks$at, n=ticks$n)
       else make.ticks(ylim, link=I, inverse=I, at=ticks$at, n=ticks$n)
       levs <- levels(x[,1])
+      n.lev <- length(levs)
       plot <- xyplot(eval(parse(
         text=paste("fit ~ as.numeric(", names(x)[1], ")"))),
         strip=function(...) strip.default(..., strip.names=c(factor.names, TRUE)),
@@ -363,6 +370,14 @@ plot.eff <- function(x, x.var, z.var=which.min(levels),
               panel.bands(x[good], y[good], upper[good], lower[good], fill=band.colors[1],
                           alpha=band.transparency, use.splines=FALSE)
             }}
+          }
+          if (partial.residuals){
+            x.fit <- as.numeric(x.data[good, predictor])
+            partial.res <- y[as.numeric(x.fit)] + residuals[good]
+            lpoints(jitter(x.fit, factor=0.5), partial.res, col=residuals.color, pch=residuals.pch, cex=residuals.cex)
+            if (smooth.residuals && length(partial.res) != 0) {
+              lpoints(1:n.lev, tapply(partial.res, x.fit, average.resid), pch=16, cex=1.25, col=residuals.color)
+            }
           }
           effect.llines(x[good], y[good], lwd=lwd, col=colors[1], lty=lines, type='b', pch=19, cex=cex, ...)
           if (has.thresholds){
@@ -723,6 +738,10 @@ plot.eff <- function(x, x.var, z.var=which.min(levels),
     
     ylim <- if (!any(is.na(ylim))) ylim else c(range[1] - .025*(range[2] - range[1]),
                                                range[2] + .025*(range[2] - range[1]))
+    if (!is.null(partial.residuals.range)){
+      ylim[1] <- min(ylim[1], partial.residuals.range[1])
+      ylim[2] <- max(ylim[2], partial.residuals.range[2])
+    }
     tickmarks <- if (type == "response" && rescale.axis) make.ticks(ylim, link=trans.link,
                                                                     inverse=trans.inverse, at=ticks$at, n=ticks$n)
     else make.ticks(ylim, link=I, inverse=I, at=ticks$at, n=ticks$n)
@@ -733,6 +752,10 @@ plot.eff <- function(x, x.var, z.var=which.min(levels),
         x[[pred]] <- as.factor(x[[pred]])
       }
     }
+    n.lev <- length(levs)
+    x.fit <- x.data[, predictors[x.var]]
+    use <- rep(TRUE, length(residuals))
+    xx <- x[, predictors[-x.var], drop=FALSE]
     plot <- xyplot(eval(parse(
       text=paste("fit ~ as.numeric(", predictors[x.var], ") |",
                  paste(predictors[-x.var], collapse="*")))),
@@ -755,6 +778,33 @@ plot.eff <- function(x, x.var, z.var=which.min(levels),
             panel.bands(x[good], y[good], upper[subscripts][good], lower[subscripts][good],
                         fill=band.colors[1], alpha=band.transparency, use.splines=FALSE)
           }}
+        }
+        if (!is.null(residuals)){
+          predictors <- predictors[-x.var]
+          factors <- sapply(xx, is.factor)
+          for (predictor in predictors){
+            use <- use & if(factors[predictor]) x.all[, predictor] == xx[subscripts[1], predictor]
+            else x.all[, predictor] == xx[subscripts[1], predictor]
+          }
+          n.in.panel <- sum(use)
+          if (n.in.panel > 0){
+            fitted <- y[good][as.numeric(x.fit[use])] 
+            partial.res <- if (!rescale.axis) original.inverse(original.link(fitted) + residuals[use])
+            else fitted + residuals[use]
+            lpoints(jitter(as.numeric(x.fit[use]), 0.5), partial.res, col=residuals.color, pch=residuals.pch, cex=residuals.cex)
+            if (show.fitted) lpoints(x.fit[use], fitted, pch=16, col=residuals.color)  # REMOVE ME
+            if (smooth.residuals && n.in.panel != 0) {
+              lpoints(1:n.lev, tapply(partial.res, x.fit[use], average.resid), pch=16, cex=1.25, col=residuals.color)
+            }
+            if (id.n > 0){
+              M <- cbind(trans(x.fit[use]), partial.res)
+              md <- mahalanobis(M, colMeans(M), cov(M))
+              biggest <- order(md, decreasing=TRUE)[1:id.n]
+              pos <- ifelse(x.fit[use][biggest] > mean(current.panel.limits()$xlim), 2, 4)
+              ltext(x.fit[use][biggest], partial.res[biggest], 
+                    names(partial.res)[biggest], pos=pos, col=id.col, cex=id.cex)
+            }
+          }
         }
         effect.llines(x[good], y[good], lwd=lwd, type='b', col=colors[1], pch=19, cex=cex, ...)
         if (has.thresholds){
